PA5/y.output
Terminals unused in grammar

   T_Continue
   T_LeftBracket
   T_RightBracket
   T_Public
   T_Private
   T_Static
   T_Class
   LOWEST
   LOWER_THAN_ELSE


State 131 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: single_declaration
    5     | function_definition

    6 single_declaration: type_specifier T_Identifier T_Semicolon
    7                   | type_specifier T_Identifier assignment_operator expression T_Semicolon

    8 type_specifier: T_Void
    9               | T_Int
   10               | T_Bool

   11 function_definition: function_prototype compound_statement_with_scope
   12                    | function_prototype T_Semicolon

   13 function_prototype: function_prototype_header T_RightParen

   14 function_prototype_header: type_specifier T_Identifier T_LeftParen
   15                          | type_specifier T_Identifier T_LeftParen parameter_declaration_list

   16 parameter_declaration_list: parameter_declaration_list T_Comma paramater_declaraion
   17                           | paramater_declaraion

   18 paramater_declaraion: type_specifier T_Identifier

   19 compound_statement_with_scope: T_LeftBrace statement_list T_RightBrace
   20                              | T_LeftBrace T_RightBrace

   21 statement_list: statement_list statement
   22               | statement

   23 statement: compound_statement_with_scope
   24          | simple_statement
   25          | iteration_statement
   26          | return_statement
   27          | decl_statement
   28          | break_statement

   29 simple_statement: expression_statement
   30                 | selection_statement

   31 expression_statement: T_Semicolon
   32                     | expression T_Semicolon

   33 selection_statement: T_If T_LeftParen expression T_RightParen compound_statement_with_scope
   34                    | T_If T_LeftParen expression T_RightParen compound_statement_with_scope T_Else compound_statement_with_scope

   35 iteration_statement: while_statement
   36                    | for_statement

   37 while_statement: T_While T_LeftParen condition T_RightParen statement

   38 for_statement: T_For T_LeftParen expression_statement expression_statement expression T_RightParen statement

   39 condition: expression

   40 return_statement: T_Return expression_statement

   41 decl_statement: single_declaration

   42 break_statement: T_Break T_Semicolon

   43 expression: assignment_expression
   44           | arithmetic_expression
   45           | relational_expression
   46           | equality_expression
   47           | logical_expression
   48           | unary_expression

   49 assignment_expression: unary_expression assignment_operator expression

   50 assignment_operator: T_Equal
   51                    | T_MulAssign
   52                    | T_DivAssign
   53                    | T_AddAssign
   54                    | T_SubAssign

   55 arithmetic_expression: expression T_Plus expression
   56                      | expression T_Dash expression
   57                      | expression T_Star expression
   58                      | expression T_Slash expression

   59 relational_expression: expression T_LeftAngle expression
   60                      | expression T_RightAngle expression
   61                      | expression T_LessEqual expression
   62                      | expression T_GreaterEqual expression

   63 equality_expression: expression T_EQ expression
   64                    | expression T_NE expression

   65 logical_expression: expression T_And expression
   66                   | expression T_Or expression

   67 postfix_expression: primary_expression
   68                   | postfix_expression T_Inc
   69                   | postfix_expression T_Dec
   70                   | func_call_expression

   71 func_call_expression: function_call_header_with_parameters T_RightParen
   72                     | function_call_header_no_parameters T_RightParen

   73 function_call_header_no_parameters: function_identifier T_LeftParen T_Void
   74                                   | function_identifier T_LeftParen

   75 function_call_header_with_parameters: function_identifier T_LeftParen arg_list

   76 arg_list: assignment_expression
   77         | arg_list T_Comma assignment_expression
   78         | primary_expression
   79         | arg_list T_Comma primary_expression

   80 function_identifier: T_Identifier

   81 primary_expression: T_Identifier
   82                   | constant
   83                   | T_LeftParen expression T_RightParen

   84 unary_expression: postfix_expression
   85                 | T_Inc unary_expression
   86                 | T_Dec unary_expression
   87                 | T_Plus unary_expression
   88                 | T_Dash unary_expression

   89 constant: T_IntConstant
   90         | T_BoolConstant


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 8 73
T_Bool (259) 10
T_Int (260) 9
T_LessEqual (261) 61
T_GreaterEqual (262) 62
T_EQ (263) 63
T_NE (264) 64
T_LeftAngle (265) 59
T_RightAngle (266) 60
T_And (267) 65
T_Or (268) 66
T_Equal (269) 50
T_MulAssign (270) 51
T_DivAssign (271) 52
T_AddAssign (272) 53
T_SubAssign (273) 54
T_While (274) 37
T_For (275) 38
T_If (276) 33 34
T_Else (277) 34
T_Return (278) 40
T_Break (279) 42
T_Continue (280)
T_Inc (281) 68 85
T_Dec (282) 69 86
T_Semicolon (283) 6 7 12 31 32 42
T_Comma (284) 16 77 79
T_Dash (285) 56 88
T_Plus (286) 55 87
T_Star (287) 57
T_Slash (288) 58
T_LeftParen (289) 14 15 33 34 37 38 73 74 75 83
T_RightParen (290) 13 33 34 37 38 71 72 83
T_LeftBracket (291)
T_RightBracket (292)
T_LeftBrace (293) 19 20
T_RightBrace (294) 19 20
T_Public (295)
T_Private (296)
T_Static (297)
T_Class (298)
T_Identifier (299) 6 7 14 15 18 80 81
T_IntConstant (300) 89
T_BoolConstant (301) 90
LOWEST (302)
LOWER_THAN_ELSE (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
DeclList (51)
    on left: 2 3, on right: 1 2
Decl (52)
    on left: 4 5, on right: 2 3
single_declaration (53)
    on left: 6 7, on right: 4 41
type_specifier (54)
    on left: 8 9 10, on right: 6 7 14 15 18
function_definition (55)
    on left: 11 12, on right: 5
function_prototype (56)
    on left: 13, on right: 11 12
function_prototype_header (57)
    on left: 14 15, on right: 13
parameter_declaration_list (58)
    on left: 16 17, on right: 15 16
paramater_declaraion (59)
    on left: 18, on right: 16 17
compound_statement_with_scope (60)
    on left: 19 20, on right: 11 23 33 34
statement_list (61)
    on left: 21 22, on right: 19 21
statement (62)
    on left: 23 24 25 26 27 28, on right: 21 22 37 38
simple_statement (63)
    on left: 29 30, on right: 24
expression_statement (64)
    on left: 31 32, on right: 29 38 40
selection_statement (65)
    on left: 33 34, on right: 30
iteration_statement (66)
    on left: 35 36, on right: 25
while_statement (67)
    on left: 37, on right: 35
for_statement (68)
    on left: 38, on right: 36
condition (69)
    on left: 39, on right: 37
return_statement (70)
    on left: 40, on right: 26
decl_statement (71)
    on left: 41, on right: 27
break_statement (72)
    on left: 42, on right: 28
expression (73)
    on left: 43 44 45 46 47 48, on right: 7 32 33 34 38 39 49 55 56
    57 58 59 60 61 62 63 64 65 66 83
assignment_expression (74)
    on left: 49, on right: 43 76 77
assignment_operator (75)
    on left: 50 51 52 53 54, on right: 7 49
arithmetic_expression (76)
    on left: 55 56 57 58, on right: 44
relational_expression (77)
    on left: 59 60 61 62, on right: 45
equality_expression (78)
    on left: 63 64, on right: 46
logical_expression (79)
    on left: 65 66, on right: 47
postfix_expression (80)
    on left: 67 68 69 70, on right: 68 69 84
func_call_expression (81)
    on left: 71 72, on right: 70
function_call_header_no_parameters (82)
    on left: 73 74, on right: 72
function_call_header_with_parameters (83)
    on left: 75, on right: 71
arg_list (84)
    on left: 76 77 78 79, on right: 75 77 79
function_identifier (85)
    on left: 80, on right: 73 74 75
primary_expression (86)
    on left: 81 82 83, on right: 67 78 79
unary_expression (87)
    on left: 84 85 86 87 88, on right: 48 49 85 86 87 88
constant (88)
    on left: 89 90, on right: 82


State 0

    0 $accept: . Program $end

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    Program                    go to state 4
    DeclList                   go to state 5
    Decl                       go to state 6
    single_declaration         go to state 7
    type_specifier             go to state 8
    function_definition        go to state 9
    function_prototype         go to state 10
    function_prototype_header  go to state 11


State 1

    8 type_specifier: T_Void .

    $default  reduce using rule 8 (type_specifier)


State 2

   10 type_specifier: T_Bool .

    $default  reduce using rule 10 (type_specifier)


State 3

    9 type_specifier: T_Int .

    $default  reduce using rule 9 (type_specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    $default  reduce using rule 1 (Program)

    Decl                       go to state 13
    single_declaration         go to state 7
    type_specifier             go to state 8
    function_definition        go to state 9
    function_prototype         go to state 10
    function_prototype_header  go to state 11


State 6

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 7

    4 Decl: single_declaration .

    $default  reduce using rule 4 (Decl)


State 8

    6 single_declaration: type_specifier . T_Identifier T_Semicolon
    7                   | type_specifier . T_Identifier assignment_operator expression T_Semicolon
   14 function_prototype_header: type_specifier . T_Identifier T_LeftParen
   15                          | type_specifier . T_Identifier T_LeftParen parameter_declaration_list

    T_Identifier  shift, and go to state 14


State 9

    5 Decl: function_definition .

    $default  reduce using rule 5 (Decl)


State 10

   11 function_definition: function_prototype . compound_statement_with_scope
   12                    | function_prototype . T_Semicolon

    T_Semicolon  shift, and go to state 15
    T_LeftBrace  shift, and go to state 16

    compound_statement_with_scope  go to state 17


State 11

   13 function_prototype: function_prototype_header . T_RightParen

    T_RightParen  shift, and go to state 18


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 14

    6 single_declaration: type_specifier T_Identifier . T_Semicolon
    7                   | type_specifier T_Identifier . assignment_operator expression T_Semicolon
   14 function_prototype_header: type_specifier T_Identifier . T_LeftParen
   15                          | type_specifier T_Identifier . T_LeftParen parameter_declaration_list

    T_Equal      shift, and go to state 19
    T_MulAssign  shift, and go to state 20
    T_DivAssign  shift, and go to state 21
    T_AddAssign  shift, and go to state 22
    T_SubAssign  shift, and go to state 23
    T_Semicolon  shift, and go to state 24
    T_LeftParen  shift, and go to state 25

    assignment_operator  go to state 26


State 15

   12 function_definition: function_prototype T_Semicolon .

    $default  reduce using rule 12 (function_definition)


State 16

   19 compound_statement_with_scope: T_LeftBrace . statement_list T_RightBrace
   20                              | T_LeftBrace . T_RightBrace

    T_Void          shift, and go to state 1
    T_Bool          shift, and go to state 2
    T_Int           shift, and go to state 3
    T_While         shift, and go to state 27
    T_For           shift, and go to state 28
    T_If            shift, and go to state 29
    T_Return        shift, and go to state 30
    T_Break         shift, and go to state 31
    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Semicolon     shift, and go to state 34
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_LeftBrace     shift, and go to state 16
    T_RightBrace    shift, and go to state 38
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    single_declaration                    go to state 42
    type_specifier                        go to state 43
    compound_statement_with_scope         go to state 44
    statement_list                        go to state 45
    statement                             go to state 46
    simple_statement                      go to state 47
    expression_statement                  go to state 48
    selection_statement                   go to state 49
    iteration_statement                   go to state 50
    while_statement                       go to state 51
    for_statement                         go to state 52
    return_statement                      go to state 53
    decl_statement                        go to state 54
    break_statement                       go to state 55
    expression                            go to state 56
    assignment_expression                 go to state 57
    arithmetic_expression                 go to state 58
    relational_expression                 go to state 59
    equality_expression                   go to state 60
    logical_expression                    go to state 61
    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 68
    constant                              go to state 69


State 17

   11 function_definition: function_prototype compound_statement_with_scope .

    $default  reduce using rule 11 (function_definition)


State 18

   13 function_prototype: function_prototype_header T_RightParen .

    $default  reduce using rule 13 (function_prototype)


State 19

   50 assignment_operator: T_Equal .

    $default  reduce using rule 50 (assignment_operator)


State 20

   51 assignment_operator: T_MulAssign .

    $default  reduce using rule 51 (assignment_operator)


State 21

   52 assignment_operator: T_DivAssign .

    $default  reduce using rule 52 (assignment_operator)


State 22

   53 assignment_operator: T_AddAssign .

    $default  reduce using rule 53 (assignment_operator)


State 23

   54 assignment_operator: T_SubAssign .

    $default  reduce using rule 54 (assignment_operator)


State 24

    6 single_declaration: type_specifier T_Identifier T_Semicolon .

    $default  reduce using rule 6 (single_declaration)


State 25

   14 function_prototype_header: type_specifier T_Identifier T_LeftParen .
   15                          | type_specifier T_Identifier T_LeftParen . parameter_declaration_list

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    $default  reduce using rule 14 (function_prototype_header)

    type_specifier              go to state 70
    parameter_declaration_list  go to state 71
    paramater_declaraion        go to state 72


State 26

    7 single_declaration: type_specifier T_Identifier assignment_operator . expression T_Semicolon

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    expression                            go to state 73
    assignment_expression                 go to state 57
    arithmetic_expression                 go to state 58
    relational_expression                 go to state 59
    equality_expression                   go to state 60
    logical_expression                    go to state 61
    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 68
    constant                              go to state 69


State 27

   37 while_statement: T_While . T_LeftParen condition T_RightParen statement

    T_LeftParen  shift, and go to state 74


State 28

   38 for_statement: T_For . T_LeftParen expression_statement expression_statement expression T_RightParen statement

    T_LeftParen  shift, and go to state 75


State 29

   33 selection_statement: T_If . T_LeftParen expression T_RightParen compound_statement_with_scope
   34                    | T_If . T_LeftParen expression T_RightParen compound_statement_with_scope T_Else compound_statement_with_scope

    T_LeftParen  shift, and go to state 76


State 30

   40 return_statement: T_Return . expression_statement

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Semicolon     shift, and go to state 34
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    expression_statement                  go to state 77
    expression                            go to state 56
    assignment_expression                 go to state 57
    arithmetic_expression                 go to state 58
    relational_expression                 go to state 59
    equality_expression                   go to state 60
    logical_expression                    go to state 61
    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 68
    constant                              go to state 69


State 31

   42 break_statement: T_Break . T_Semicolon

    T_Semicolon  shift, and go to state 78


State 32

   85 unary_expression: T_Inc . unary_expression

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 79
    constant                              go to state 69


State 33

   86 unary_expression: T_Dec . unary_expression

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 80
    constant                              go to state 69


State 34

   31 expression_statement: T_Semicolon .

    $default  reduce using rule 31 (expression_statement)


State 35

   88 unary_expression: T_Dash . unary_expression

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 81
    constant                              go to state 69


State 36

   87 unary_expression: T_Plus . unary_expression

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 82
    constant                              go to state 69


State 37

   83 primary_expression: T_LeftParen . expression T_RightParen

    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41

    expression                            go to state 83
    assignment_expression                 go to state 57
    arithmetic_expression                 go to state 58
    relational_expression                 go to state 59
    equality_expression                   go to state 60
    logical_expression                    go to state 61
    postfix_expression                    go to state 62
    func_call_expression                  go to state 63
    function_call_header_no_parameters    go to state 64
    function_call_header_with_parameters  go to state 65
    function_identifier                   go to state 66
    primary_expression                    go to state 67
    unary_expression                      go to state 68
    constant                              go to state 69


State 38

   20 compound_statement_with_scope: T_LeftBrace T_RightBrace .

    $default  reduce using rule 20 (compound_statement_with_scope)


State 39

   80 function_identifier: T_Identifier .
   81 primary_expression: T_Identifier .

    T_LeftParen  reduce using rule 80 (function_identifier)
    $default     reduce using rule 81 (primary_expression)


State 40

   89 constant: T_IntConstant .

    $default  reduce using rule 89 (constant)


State 41

   90 constant: T_BoolConstant .

    $default  reduce using rule 90 (constant)


State 42

   41 decl_statement: single_declaration .

    $default  reduce using rule 41 (decl_statement)


State 43

    6 single_declaration: type_specifier . T_Identifier T_Semicolon
    7                   | type_specifier . T_Identifier assignment_operator expression T_Semicolon

    T_Identifier  shift, and go to state 84


State 44

   23 statement: compound_statement_with_scope .

    $default  reduce using rule 23 (statement)


State 45

   19 compound_statement_with_scope: T_LeftBrace statement_list . T_RightBrace
   21 statement_list: statement_list . statement

    T_Void          shift, and go to state 1
    T_Bool          shift, and go to state 2
    T_Int           shift, and go to state 3
    T_While         shift, and go to state 27
    T_For           shift, and go to state 28
    T_If            shift, and go to state 29
    T_Return        shift, and go to state 30
    T_Break         shift, and go to state 31
    T_Inc           shift, and go to state 32
    T_Dec           shift, and go to state 33
    T_Semicolon     shift, and go to state 34
    T_Dash          shift, and go to state 35
    T_Plus          shift, and go to state 36
    T_LeftParen     shift, and go to state 37
    T_LeftBrace     shift, and go to state 16
    T_RightBrace    shift, and go to state 85
    T_Identifier    shift, and go to state 39
    T_IntConstant   shift, and go to state 40
    T_BoolConstant  shift, and go to state 41
